syntax = "proto3";
package libfg.proto;
option java_package = "libfg.proto";

enum DataSourceType{
  DT_RESERVED = 0;
  CSV_DATA = 1;
}
message DataSource {
  DataSourceType data_type = 1;//data format
  string biz_name = 2;//business department's name
  string data_conf = 3;//meta data file's name
}
message DataSourceList {
  string version = 1;
  string description = 2;
  repeated DataSource data_source = 3;
}

enum FeatureDataType{
  FT_RESERVED = 0;
  STRING_TYPE = 1;
  INTEGER_TYPE = 2;
  REAL_TYPE = 3;
}

message CsvDataConfig{
  int32 column = 1;
  string feature_name = 2;
  FeatureDataType feature_data_type = 3;
}
message CsvDataConfigList{
  string version = 1;
  string description = 2;
  string data_path = 3;
  string separator = 4;
  string file_extension = 5;
  repeated CsvDataConfig config_list = 6;
}
